syntax = "proto3";

package pb;
option go_package = "./pb";

import "base.proto";


message OrderRequest {
  int64 id = 1;
}

message UserOrderRequest {
  int64 userId = 1;
}

message Order {
  int64 id = 1;
  int64 user_id = 2;
  string name = 3;
  int64 price = 4;
  string description = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message OrderResponse {
  pb.BaseResponse base = 1;
  Order order = 2;
}

message OrderListResponse {
  pb.BaseResponse response = 1;
  repeated Order orders = 2;
}

service OrderService {
  rpc CreateOrder (Order) returns (pb.BaseResponse);
  rpc GetOrder (OrderRequest) returns (OrderResponse);
  rpc DeleteOrder (OrderRequest) returns (pb.BaseResponse);
  rpc OrderList (UserOrderRequest) returns (OrderListResponse);
}